# 10000_years_of_solitude

./: .gitignore  .sb_config.json  .sb_config.json.template  .willville.json  .windsurfrules  AGENTS.md  LOGICAL_PROBLEMS.md  PROJECT_OVERVIEW.md  REFACTOR_OVERVIEW.md  STATUS.md  THE_BIBLE.md  THE_LIBRARY.md  THE_WIKI.md  TIMELINE_STRUCTURE.md  WORLD_RULES.md  pyproject.toml
Manuscript/: Ideas.rtf  MANIFEST  canon.yaml  export.sh
Manuscript/CERN/: Phyiscal Limits.rtf
Manuscript/Caius/: Drawdown.md  Jonas.rtf
Manuscript/Furukawa/: Furukawa.md
Manuscript/Interstitials/: On Memory.rtf
Manuscript/Interstitials/Wiki/: Air Travel in the Loop.md  Caius Middleton.md  Crime and Justice in the Loop.md  Neuroscience in the Loop.md  Pets in the Loop.md  Selected Loop Records.md  Sleep.md  The Boards.md  The Lo-Fi Simulation Theory.md  The RNG Degradation.md  WTFreality.md
Manuscript/Jennifer/: Jennifer - Egypt.rtf  Jennifer.rtf
Manuscript/Meredith/: The Final Iteration.md
Manuscript/One-Off Stories/: Meredith.rtf  Sydney.rtf  Taneisha.rtf  This is CNN.rtf  Unnamed (Baby).rtf
Manuscript/Thud/: Thud.rtf
manuscript_tools/: build.py  cli.py  frontmatter.py  lint.py
other_writings/: .gitignore  article.md  article_distribution.md  article_review.md
tests/: test_build.py  test_cli.py  test_frontmatter.py  test_lint.py
